# oz_django

./: manage.py  pyproject.toml
.github/workflows/: ci.yml
oz_django_prc/: asgi.py  settings.py  urls.py  wsgi.py
tabom/: models.py
tabom/apis/v1/: like_router.py
tabom/migrations/: 0001_initial.py  0002_like_unique_user_article.py
tabom/services/: like_service.py
tabom/tests/: test_article_service.py  test_like_service.py
